fix activity dialog to be full screen on mobile again

--- a/src/index.css
+++ b/src/index.css
@@ -154,7 +154,7 @@ span.label {
   width: auto !important;
   background: #fff;
   border: 0;
-  color: rgb(93, 188, 210);  
+  color: rgb(93, 188, 210);
   font-size: 1.2rem;
   border-radius: 5px;
   float: right;
@@ -193,11 +193,49 @@ span.label {
   float: right;
 }
 
+.global--modal-content {
+  transform: translate(0, 0) !important;
+  position: absolute !important;
+  top: 20px !important;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 100vh !important;
+}
+
+.dialog-close-button {
+  background-color: #ccc;
+  color: #fff;
+  float: right;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+  border-radius: 100%;
+  box-shadow: 1px 1px 3px;
+}
+
 @media only screen and (max-width: 768px) {
   /* For mobile: */
   .top-bar-left,
   .top-bar-right {
     clear: both;
     width: 100% !important;
+  }
+
+  .global--modal-content {
+    width: 100% !important;
+    transform: translate(0, 0) !important;
+    position: absolute !important;
+    top: 0 !important;
+    height: 100vh !important;
+  }
+
+  .global--modal-body {
+    padding: 10 !important;
+    max-height: none !important;
+  }
+
+  .global--modal-paper {
+    overflow: auto !important;
+    height: 100vh !important;
   }
 }
